initial implementation of tenant-based authenticator configuration as well as a new API for mananging it and a cache object for caching it.
