# service/auth.py
@@ -1,14 +1,16 @@
 from flask import request, g, session
 
 from common import auth
+from common.config import conf
 from common import errors as common_errors
 
+from service import t
+from service.models import tenant_configs_cache
 from service.ldap import check_username_password
 
 # get the logger instance -
 from common.logs import get_logger
 logger = get_logger(__name__)
-
 
 
 def authn_and_authz():
@@ -46,6 +48,65 @@ def authentication():
     if not hasattr(request, 'url_rule') or not hasattr(request.url_rule, 'rule') or not request.url_rule.rule:
         raise common_errors.ResourceError("The endpoint and HTTP method combination "
                                           "are not available from this service.")
+
+    # only the authenticator's own service token and tenant admins for the tenant can retrieve or modify the tenant
+    # config
+    if '/v3/oauth2/admin' in request.url_rule.rule:
+        logger.debug("admin endpoint; checking for authentictor service token or tenant admin role...")
+        # admin endpoints always require tapis token auth
+        auth.authentication()
+        # we'll need to use the request's tenant_id, so make sure it is resolved now
+        auth.resolve_tenant_id_for_request()
+        # first, make sure this request is for a tenant served by this authenticator
+        if g.request_tenant_id not in conf.tenants:
+            raise common_errors.PermissionsError(f"The request is for a tenant ({g.request_tenant_id}) that is not "
+                                                 f"served by this authenticator.")
+        # we only want to honor tokens from THIS authenticator; i.e., not some other authenticator. therefore, we need
+        # to check that the tenant_id associated with the token (g.tenant_id) is the same as THIS authenticator's tenant
+        # id;
+        if g.username == conf.service_name and g.tenant_id == conf.service_tenant_id:
+            logger.info(f"allowing admin request because username was {conf.service_name} "
+                        f"and tenant was {conf.service_tenant_id}")
+            return True
+        logger.debug(f"request token does not represent THIS authenticator: token username: {g.username};"
+                     f" request tenant: {g.tenant_id}. Now checking for tenant admin...")
+        # all other service accounts are not allowed to update authenticator
+        if g.account_type == 'service':
+            raise common_errors.PermissionsError("Not authorized -- service accounts are not allowed to access the"
+                                                 "authenticator admin endpoints.")
+        # sanity check -- the request tenant id should be the same as the token tenant id in the remaining cases because
+        # they are all user tokens
+        if not g.request_tenant_id == g.tenant_id:
+            logger.error(f"program error -- g.request_tenant_id: {g.request_tenant_id} not equal to "
+                         f"g.tenant_id: {g.tenant_id} even though account type was user!")
+            raise common_errors.ServiceConfigError(f"Unexpected program error checking permissions. The tenant id of"
+                                                   f"the request ({g.request_tenant_id})  did not match the tenant id "
+                                                   f"of the access token ({g.tenant_id}). Please contact server "
+                                                   f"administrators.")
+        # check SK for tenant admin --
+        try:
+            rsp = t.sk.isAdmin(tenant=g.tenant_id, user=g.username)
+        except Exception as e:
+            logger.error(f"Got exception trying to check tenant admin role for tenant: {g.tenant_id} "
+                         f"and user: {g.username}; exception: {e}")
+            raise common_errors.PermissionsError("Could not check tenant admin role with SK; this role is required for "
+                                                 "accessing the authenticator admin endpoints.")
+        try:
+            if rsp.isAuthorized:
+                logger.info(f"user {g.username} had tenant admin role for tenant {g.tenant_id}; allowing request.")
+                return True
+            else:
+                logger.info(f"user {g.username} DID NOT have tenant admin role for tenant {g.tenant_id}; "
+                            f"NOT allowing request.")
+                raise common_errors.PermissionsError("Permission denied -- Tenant admin role required for accessing "
+                                                     "the authenticator admin endpoints.")
+        except Exception as e:
+            logger.error(f"got exception trying to check isAuthorized property from isAdmin() call to SK."
+                         f"username: {g.username}; tenant: {g.tenant_id}; rsp: {rsp}; e: {e}")
+            logger.info(f"user {g.username} DID NOT have tenant admin role for tenant {g.tenant_id}; "
+                        f"NOT allowing request.")
+            raise common_errors.PermissionsError("Permission denied -- Tenant admin role required for accessing the "
+                                                 "authenticator admin endpoints.")
 
     # no credentials required on the authorize and login pages
     if '/v3/oauth2/authorize' in request.url_rule.rule or '/v3/oauth2/login' in request.url_rule.rule:
@@ -129,12 +190,19 @@ def authentication():
         or '/v3/oauth2/portal-login' in request.url_rule.rule:
         # or '/v3/oauth2/webapp/callback' in request.url_rule.rule \
         # or '/v3/oauth2/webapp/token-display' in request.url_rule.rule \
-        logger.debug("call for some other token webapp page.")
+        logger.debug("call is for some token webapp page.")
         auth.resolve_tenant_id_for_request()
         try:
             logger.debug(f"request_tenant_id: {g.request_tenant_id}")
         except AttributeError:
             raise common_errors.BaseTapisError("Unable to resolve tenant_id for request.")
+        #  make sure this tenant allows the token web app
+        config = tenant_configs_cache.get_config(g.request_tenant_id)
+        logger.debug(f"got tenant config: {config.serialize}")
+        if not config.use_token_webapp:
+            logger.info(f"tenant {g.request_tenant_id} not configured for the token webapp. Raising error")
+            raise common_errors.PermissionsError("This tenant is not configured to use the Token Webapp.")
+
         return True
 
 
