# service/resources/openapi_v3.yml
@@ -26,6 +26,47 @@ servers:
   description: catch-all server definition for other Tapis instances.
 
 paths:
+  /v3/oauth2/admin/config:
+    get:
+      tags:
+        - Admin
+      operationId: get_config
+      description: Get the authenticator configuraion for the tenant; restricted to Tenant admins.
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/BasicResponse'
+                properties:
+                  result:
+                    $ref: '#/components/schemas/TenantConfig'
+    put:
+      tags:
+        - Admin
+      operationId: update_config
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewTenantConfig'
+      description: Update the authenticator configuraion for the tenant; restricted to Tenant admins.
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/BasicResponse'
+                properties:
+                  result:
+                    $ref: '#/components/schemas/TenantConfig'
+
+
   /v3/oauth2/clients:
     get:
       tags:
@@ -222,6 +263,66 @@ components:
         metadata:
           type: object
           description: Metadata about the result object, including pagination information
+
+    TenantConfig:
+      type: object
+      properties:
+        allowable_grant_types:
+          type: array
+          items:
+            type: string
+          description: JSON-serializable list of allowable grant types
+        use_ldap:
+          type: boolean
+          description: whether to use the LDAP configured in the Tenants API for this tenant.
+        use_token_webapp:
+          type: boolean
+          description: whether to make the Authenticator token web app available
+        mfa_config:
+          type: object
+          description: JSON-serializable object which includes various details such as which MFA system to use (e.g., TACC MFA or another MFA) and configurations for it.
+        default_access_token_ttl:
+          type: integer
+          description: The access token TTL, in seconds, for standard grant types, such as authorization code.
+        default_refresh_token_ttl:
+          type: integer
+          description: The refresh token TTL, in seconds, for standard grant types, such as authorization code.
+        max_access_token_ttl:
+          type: integer
+          description: The maxiumum access token TTL, in seconds, for grant types that allow the caller to specify the TTL.
+        max_refresh_token_ttl:
+          type: integer
+          description: The maxiumum refresh token TTL, in seconds, for grant types that allow the caller to specify the TTL.
+        custom_idp_configuration:
+          type: object
+          description: JSON-serializable object which includes various configuration details for tenants using an IdP that is not LDAP/AD.
+
+    NewTenantConfig:
+      type: object
+      properties:
+        allowable_grant_types:
+          type: array
+          items:
+            type: string
+          description: JSON-serializable list of allowable grant types
+        use_ldap:
+          type: boolean
+          description: whether to use the LDAP configured in the Tenants API for this tenant.
+        use_token_webapp:
+          type: boolean
+          description: whether to make the Authenticator token web app available
+        default_access_token_ttl:
+          type: integer
+          description: The access token TTL, in seconds, for standard grant types, such as authorization code.
+        default_refresh_token_ttl:
+          type: integer
+          description: The refresh token TTL, in seconds, for standard grant types, such as authorization code.
+        max_access_token_ttl:
+          type: integer
+          description: The maxiumum access token TTL, in seconds, for grant types that allow the caller to specify the TTL.
+        max_refresh_token_ttl:
+          type: integer
+          description: The maxiumum refresh token TTL, in seconds, for grant types that allow the caller to specify the TTL.
 
     NewClient:
       type: object
